ack, fix directories etc

--- a/index.html
+++ b/index.html
@@ -35,36 +35,36 @@
 	<meta property="og:description" content="{{ share_desc }}">
 
 	<!-- STYLES -->
-	<link rel="stylesheet" href="/styles/Merriweather/merriweather.css">
-    <link rel="stylesheet" href="/styles/Open_Sans/opensans.css">
-    <link rel="stylesheet" href="/styles/littlefoot.css"/> <!-- before page.css, so page can override it -->
-	<link rel="stylesheet" href="/styles/page.css">
+	<link rel="stylesheet" href="styles/Merriweather/merriweather.css">
+    <link rel="stylesheet" href="styles/Open_Sans/opensans.css">
+    <link rel="stylesheet" href="styles/littlefoot.css"/> <!-- before page.css, so page can override it -->
+	<link rel="stylesheet" href="styles/page.css">
 
 	<!-- SCRIPTS -->
 
     <!-- This website's own scripts -->
-	<script src="/scripts/page.js"></script>
+	<script src="scripts/page.js"></script>
     <script>window.IS_DRAFT=true;</script>
 
     <!-- Littlefoot: for my feetnotes -->
-    <script src="/scripts/littlefoot.js" ></script>
+    <script src="scripts/littlefoot.js" ></script>
 
     <!-- Nutshell: expandable explanations -->
-    <script src="/scripts/nutshell-v1.0.5.js"></script>
+    <script src="scripts/nutshell-v1.0.5.js"></script>
     <script> Nutshell.setOptions({ startOnLoad: false, /* Start AFTER footnotes loaded */ }); </script>
 
     <!-- Orbit: make memory a choice -->
     <script type="module" src="https://js.withorbit.com/orbit-web-component.js"></script>
 
     <!-- MathJAX: for nice math -->
-    <script src="/scripts/tex-mml-chtml.js"></script>
+    <script src="scripts/tex-mml-chtml.js"></script>
 
 </head>
 <body>
 
 <!-- HACKBRAND -->
 <a class="orpheus-flag" target="_blank" href="https://hackclub.com/">
-	<img src="/styles/orpheus-flag.svg" width="560" height="315" alt="A project by Hack Club" title="A project by Hack Club">
+	<img src="styles/orpheus-flag.svg" width="560" height="315" alt="A project by Hack Club" title="A project by Hack Club">
 </a>
 
 <!-- The Sidebar UI -->
@@ -147,7 +147,7 @@
     -->
     <div id="header" class="article">
         <div id="splash_image">
-            <img id="splash_image_banner" src="/styles/assets/placeholder_banner.png"/>
+            <img id="splash_image_banner" src="styles/assets/placeholder_banner.png"/>
         </div>
         <div id="header_words">
     		<div id="title">
@@ -467,7 +467,7 @@ It’s what you know for sure that just ain’t so.</em>”</p>
 </ul>
 <p>(To review the flashcards, click the Table of Contents icon in the right sidebar, and click the &quot;🤔 Review&quot; links. Alternatively, download the <a href="TODO">Anki deck for the Intro</a>.)</p>
 <p>Finally! Now that we've taken the 10,000-foot view, let's get hiking on our whirlwind tour of AI Safety... for us warm, normal, fleshy humans!</p>
-<p><a href="../p1" style="font-size:4em" target="_self"><b>(PART ONE →)</b></a></p>
+<p><a href="p1" style="font-size:4em" target="_self"><b>(PART ONE →)</b></a></p>
 <h4>:x Four Objects</h4>
 <p>Hi! Whenever I have a tangent that doesn't fit the reading flow, I'll shove it into an &quot;expandable&quot; section like this one! (They'll be links with <em>dotted</em> underlines, not solid underlines.)</p>
 <p>Anyway, here's some state-of-the-art generative AIs trying to draw four objects:</p>
