--- a/p1/index.html
+++ b/p1/index.html
@@ -35,36 +35,36 @@
 	<meta property="og:description" content="{{ share_desc }}">
 
 	<!-- STYLES -->
-	<link rel="stylesheet" href="/styles/Merriweather/merriweather.css">
-    <link rel="stylesheet" href="/styles/Open_Sans/opensans.css">
-    <link rel="stylesheet" href="/styles/littlefoot.css"/> <!-- before page.css, so page can override it -->
-	<link rel="stylesheet" href="/styles/page.css">
+	<link rel="stylesheet" href="../styles/Merriweather/merriweather.css">
+    <link rel="stylesheet" href="../styles/Open_Sans/opensans.css">
+    <link rel="stylesheet" href="../styles/littlefoot.css"/> <!-- before page.css, so page can override it -->
+	<link rel="stylesheet" href="../styles/page.css">
 
 	<!-- SCRIPTS -->
 
     <!-- This website's own scripts -->
-	<script src="/scripts/page.js"></script>
+	<script src="../scripts/page.js"></script>
     <script>window.IS_DRAFT=true;</script>
 
     <!-- Littlefoot: for my feetnotes -->
-    <script src="/scripts/littlefoot.js" ></script>
+    <script src="../scripts/littlefoot.js" ></script>
 
     <!-- Nutshell: expandable explanations -->
-    <script src="/scripts/nutshell-v1.0.5.js"></script>
+    <script src="../scripts/nutshell-v1.0.5.js"></script>
     <script> Nutshell.setOptions({ startOnLoad: false, /* Start AFTER footnotes loaded */ }); </script>
 
     <!-- Orbit: make memory a choice -->
     <script type="module" src="https://js.withorbit.com/orbit-web-component.js"></script>
 
     <!-- MathJAX: for nice math -->
-    <script src="/scripts/tex-mml-chtml.js"></script>
+    <script src="../scripts/tex-mml-chtml.js"></script>
 
 </head>
 <body>
 
 <!-- HACKBRAND -->
 <a class="orpheus-flag" target="_blank" href="https://hackclub.com/">
-	<img src="/styles/orpheus-flag.svg" width="560" height="315" alt="A project by Hack Club" title="A project by Hack Club">
+	<img src="../styles/orpheus-flag.svg" width="560" height="315" alt="A project by Hack Club" title="A project by Hack Club">
 </a>
 
 <!-- The Sidebar UI -->
@@ -147,7 +147,7 @@
     -->
     <div id="header" class="article">
         <div id="splash_image">
-            <img id="splash_image_banner" src="/styles/assets/placeholder_banner.png"/>
+            <img id="splash_image_banner" src="../styles/assets/placeholder_banner.png"/>
         </div>
         <div id="header_words">
     		<div id="title">
@@ -336,7 +336,7 @@ What's confusing, interesting, what you like or dislike? Critical honest feedbac
 <hr>
 <h3>🤔 Review #1 (OPTIONAL!)</h3>
 <p>Want to actually remember what you've read here, instead of forgetting it all 2 days later? Here's an <em>optional</em> flashcard review for you!</p>
-<p>(<a href="#SpacedRepetition">:Learn more about &quot;Spaced Repetition&quot; flashcards</a>. Alternatively, download <a href="TODO">all of Part One's cards as an Anki deck</a>)</p>
+<p>(<a href="../#SpacedRepetition">:Learn more about &quot;Spaced Repetition&quot; flashcards</a>. Alternatively, download <a href="TODO">all of Part One's cards as an Anki deck</a>)</p>
 <p><a id="review_1"></a></p>
 <orbit-reviewarea>
     <orbit-prompt
@@ -1018,15 +1018,15 @@ All fascinating research directions, but none of them are the clear winner (yet)
         answer="The Titanic was slow & steady, yet still fatal.">
     </orbit-prompt>
     <orbit-prompt
-        question="The intuitive 'prior' for the Skeptic case on powerful AI"
+        question="The intuitive 'prior' for the Skeptic case on powerful AI:"
         answer="Humans have already survived for 300,000 years, chances that *this* is the (near-)final generation is low.">
     </orbit-prompt>
     <orbit-prompt
-        question="The intuitive 'prior' for the Cautious case on powerful AI"
+        question="The intuitive 'prior' for the Cautious case on powerful AI:"
         answer="Usually in history, when a group meets a 'higher capabilities' group, it goes badly for the former.">
     </orbit-prompt>
     <orbit-prompt
-        question="Why trying to forecast 'probability of doom' may be a self-denying prophecy"
+        question="Why trying to forecast 'probability of doom' may be a self-denying prophecy:"
         answer="If folks think P(doom) is low, they'll get complacent, so it'll happen. If folks think P(doom) is high, they'll react hard, and it'll be avoided">
     </orbit-prompt>
     <orbit-prompt
