--- a/index.html
+++ b/index.html
@@ -254,19 +254,19 @@ What's confusing, interesting, what you like or dislike? Critical honest feedbac
 <h3>Part 2: The problems</h3>
 <p><em>The</em> problem of AI Safety is this:<sup class="footnote-ref"><a href="#fn4" id="fnref4">[4]</a></sup></p>
 <blockquote>
-<p><u><strong>The Value Alignment Problem</strong></u>:
+<p><u><strong>The Value Alignment Problem</strong></u>:<br>
 “How can we make AI robustly serve humane values?”</p>
 </blockquote>
 <p>(NOTE: I wrote <em>humane</em>, with an &quot;e&quot;, not just &quot;human&quot;. A <em>human</em> may or may not be <em>humane</em>.)</p>
 <p>We can break this problem down by &quot;Problems in Humans vs AI&quot;:</p>
 <blockquote>
-<p><u><strong>Humane Values:</strong></u>
-“What <em>are</em> humane values, anyway?”
+<p><u><strong>Humane Values:</strong></u><br>
+“What <em>are</em> humane values, anyway?”<br>
 (a problem for philosophy &amp; ethics)</p>
 </blockquote>
 <blockquote>
-<p><u><strong>The <em>Technical</em> Alignment Problem:</strong></u>
-“How can we make AI robustly serve <em>any intended goal</em> at all?”
+<p><u><strong>The <em>Technical</em> Alignment Problem:</strong></u><br>
+“How can we make AI robustly serve <em>any intended goal</em> at all?”<br>
 (a problem for computer scientists - surprisingly, still unsolved!)</p>
 </blockquote>
 <p>(To correct a common misconception: &quot;<em>technically</em> aligned&quot; does not mean &quot;humane&quot;! A mad programmer could, in principle, get an AI to robustly serve <em>their</em> intended goals, but their intended goals are inhumane.)</p>
