--- a/p1/index.html
+++ b/p1/index.html
@@ -1205,7 +1205,7 @@ All fascinating research directions, but none of them are the clear winner (yet)
 	<div id="footer">
 		<p>
 			asdasadsdasdas
-			<a href='https://creativecommons.org/publicdomain/zero/1.0/'>dedicated to the public domain!</a>
+			(todo: credits, newsletter, license)
         </p>
 	</div>
 
