--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <title>there once</title>
+    <title>there once!</title>
 <style>
 body{
     margin:40px auto;
@@ -18,7 +18,7 @@ h1,h2,h3{
 </head>
 <body>
 
-<!-- was a man -->
+<!-- was a man... -->
 
 <h1>Hello!</h1>
 <p>This is a test for my build</p>
@@ -31,6 +31,28 @@ h1,h2,h3{
 <p>Meow!</p>
 <p><span style="color:#ff4040">Allowing HTML?</span></p>
 <p>What about feetnotes?<sup class="footnote-ref"><a href="#fn1" id="fnref1">[1]</a></sup></p>
+<orbit-reviewarea>
+    <orbit-prompt
+        question="Who's widely considered the founder of Computer Science & Artificial Intelligence?"
+        answer="Alan Turing (this handsome fella)"
+        answer-attachments="https://cloud-c1yyfcjxd-hack-club-bot.vercel.app/0aisffs-turing.jpg">
+        <!-- aisffs-turing.jpg -->
+    </orbit-prompt>
+    <orbit-prompt
+        question="The two main eras of AI (more or less):"
+        answer="Before 2000: Symbolic AI. After 2000: Deep Learning.">
+    </orbit-prompt>
+    <orbit-prompt
+        question="What was Symbolic AI good at, and bad at? What is Deep Learning currently good at, and bad at?"
+        answer="Symbolic AI: good at Logic, bad at 'Intuition'. Deep Learning: good at 'Intuition', bad at Logic.">
+    </orbit-prompt>
+    <orbit-prompt
+        question="Visualize what an Artificial Neural Network (ANN) looks like:"
+        answer=""
+        answer-attachments="https://cloud-rj2crsmrc-hack-club-bot.vercel.app/0aisffs-ann.png">
+        <!-- aisffs-ann.png -->
+    </orbit-prompt>
+</orbit-reviewarea>
 <hr class="footnotes-sep">
 <section class="footnotes">
 <ol class="footnotes-list">
@@ -41,7 +63,9 @@ h1,h2,h3{
 </section>
 
 
-<!-- from nantucket -->
+<!-- from nantucket? -->
 
 </body>
 </html>
+
+<script type="module" src="https://js.withorbit.com/orbit-web-component.js"></script>
