--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ It’s what you know for sure that just ain’t so.</em>”</p>
 <p>(To review the flashcards, click the Table of Contents icon in the right sidebar, and click the &quot;🤔 Review&quot; links. Alternatively, download the <a href="TODO">Anki deck for the Intro</a>.)</p>
 <p>Finally! Now that we've taken the 10,000-foot view, let's get hiking on our whirlwind tour of AI Safety... for us warm, normal, fleshy humans!</p>
 <p><strong>Beta-readers: THE DRAFT IS TWO PAGES LONG, CLICK LINK BELOW, THX</strong></p>
-<p><a href="p1/index2.html" style="font-size:4em" target="_self"><b>(PART ONE →)</b></a></p>
+<p><a href="p1" style="font-size:4em" target="_self"><b>(PART ONE →)</b></a></p>
 <h4>:x Four Objects</h4>
 <p>Hi! Whenever I have a tangent that doesn't fit the reading flow, I'll shove it into an &quot;expandable&quot; section like this one! (They'll be links with <em>dotted</em> underlines, not solid underlines.)</p>
 <p>Anyway, here's some state-of-the-art generative AIs trying to draw four objects:</p>
