warning to betareaders to not sign up for Orbit yet

--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
 <p>To avoid that for <em>this</em> guide, I've included some <em>OPTIONAL</em> interactive flashcards! They use &quot;Spaced Repetition&quot;, an easy-ish, evidence-backed way to &quot;make long-term memory a choice&quot;. (<a href="#SpacedRepetition">:click here to learn more about Spaced Repetition!</a>)</p>
 <p>Here: <strong>try the below flashcards, to retain what you just learnt!</strong></p>
 <p>(There's an optional sign-up at the end, <em>if</em> you want to save these cards for long-term study. Note: <em>I do not own or control this app</em>, it's third-party. If you'd rather use the open source flashcard app <a href="https://apps.ankiweb.net/index.html">Anki</a>, <strong>here's <a href="TODO">a downloadable Anki deck</a></strong>!)</p>
+<p><strong>(Beta-readers: Hey don't sign up yet for Orbit, these flashcards may or may not change before the final version)</strong></p>
 <p><a id="review_1"></a></p>
 <orbit-reviewarea>
     <orbit-prompt
