--- a/p1/index.html
+++ b/p1/index.html
@@ -321,6 +321,7 @@
 <h3>🤔 Review #1 (OPTIONAL!)</h3>
 <p>Want to actually remember what you've read here, instead of forgetting it all 2 days later? Here's an <em>optional</em> flashcard review for you!</p>
 <p>(<a href="../#SpacedRepetition">:Learn more about &quot;Spaced Repetition&quot; flashcards</a>. Alternatively, download <a href="TODO">all of Part One's cards as an Anki deck</a>)</p>
+<p><strong>(Beta-readers: Hey don't sign up yet for Orbit, these flashcards may or may not change before the final version)</strong></p>
 <p><a id="review_1"></a></p>
 <orbit-reviewarea>
     <orbit-prompt
