--- a/p1/index.html
+++ b/p1/index.html
@@ -1046,7 +1046,12 @@ All fascinating research directions, but none of them are the clear winner (yet)
 <p><em><strong>How do we ensure that AI robustly serves humane values?</strong></em></p>
 </blockquote>
 <p>Good question. Let's dive in!</p>
-<p><code>(SIGN UP NEWSLETTER FOR RELEASE OF PART TWO: PROBABLY JULY 2024)</code></p>
+<p>// OH NO</p>
+<p>Oh. Eeeeeeesh. 😬</p>
+<p>Sorry for the cliffhanger. Look, these 20,000 words <em>with illustrations</em> took me a long time to make, ok? <strong>Part Two</strong> will be out July 2024, <strong>Part Three</strong> will be out October 2024.</p>
+<p>In the meantime, two things you can do. 1) Sign up to be notified when those parts come out: ⤵</p>
+<p><iframe src='../signup/signup.html' width='640' height='200'></iframe></p>
+<p>And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span style='display: inline-block; transform: scale(6) translate(6px,3px);'>⤵</span></p>
 <hr class="footnotes-sep">
 <section class="footnotes">
 <ol class="footnotes-list">
