Holy moly fixing these horrible footnote bugs

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@ Also thank you to these non-teenagers for giving feedback:
 names
 </blockquote>
 <p>
-Any errors remaining in the work are solely the fault of
+Any errors remaining are solely the fault of
 <a href="TODO">Susan the Scapegoat</a>.
 </p>
 <p style="text-align:center">
@@ -713,6 +713,10 @@ Thank you for being the kind of person to read the credits~ 🙏
     <a href="#SpacedRepetition">: What is Spaced Repetition?</a>
     <br>
     <a href="#ConcreteRogueAI">: Concrete ways an AI could 'escape containment' & affect the world</a>
+</p>
+<p>
+    Also, the dancing robot catboy animation
+    is based off <a href="https://www.youtube.com/watch?v=yD2FSwTy2lw">this thing</a>.
 </p>
 
     </div>
