--- a/p1/index.html
+++ b/p1/index.html
@@ -1048,8 +1048,11 @@ All fascinating research directions, but none of them are the clear winner (yet)
 <p>Good question. Let's dive in!</p>
 <p>// OH NO</p>
 <p>Oh. Eeeeeeesh. 😬</p>
-<p>Sorry for the cliffhanger. Look, these 20,000 words <em>with illustrations</em> took me a long time to make, ok? <strong>Part Two</strong> will be out July 2024, <strong>Part Three</strong> will be out October 2024.</p>
-<p>In the meantime, two things you can do. 1) Sign up to be notified when those parts come out: ⤵</p>
+<p>Sorry for the cliffhanger. Look, these 20,000+ words <em>with illustrations</em> took me a long time to make, ok? <strong>Part Two</strong> will be out July 2024, <strong>Part Three</strong> will be out October 2024.</p>
+<p>In the meantime, <em>two</em> things you can do.</p>
+<ol>
+<li>Sign up to be notified when the next chapters come out: ⤵</li>
+</ol>
 <p><iframe src='../signup/signup.html' width='640' height='200'></iframe></p>
 <p>And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span style='display: inline-block; transform: scale(6) translate(6px,3px);'>⤵</span></p>
 <hr class="footnotes-sep">
@@ -1247,7 +1250,7 @@ Also thank you to these non-teenagers for giving feedback:
 names
 </blockquote>
 <p>
-Any errors remaining in the work are solely the fault of
+Any errors remaining are solely the fault of
 <a href="TODO">Susan the Scapegoat</a>.
 </p>
 <p style="text-align:center">
