--- a/index.html
+++ b/index.html
@@ -147,35 +147,60 @@
         <div id="chapter_nav_centered">
             <a target="_self" href=""
                 class="live">
-                <div selected style="line-height:41px;">
-                    introduction
+                <div selected>
+                    <span class='chapter-nav-desktop'>
+                        introduction
+                    </span>
+                    <span class='chapter-nav-phone'>
+                        intro
+                    </span>
                 </div>
             </a>
             <a target="_self" href="p1"
                 class="live">
                 <div  >
-                    part 1<br>past & future
+                    <span class='chapter-nav-desktop'>
+                        part 1<br>past & future
+                    </span>
+                    <span class='chapter-nav-phone'>
+                        part 1
+                    </span>
                 </div>
             </a>
             <a target="_self" href="#"
                 title="COMING JULY 2024, probably"
                 onclick="alert('COMING JULY 2024, probably')">
                 <div>
-                    part 2<br>problems
+                    <span class='chapter-nav-desktop'>
+                        part 2<br>problems
+                    </span>
+                    <span class='chapter-nav-phone'>
+                        part 2
+                    </span>
                 </div>
             </a>
             <a target="_self" href="#"
                 title="COMING OCT 2024, probably"
                 onclick="alert('COMING OCT 2024, probably')">
                 <div>
-                    part 3<br>solutions?
+                    <span class='chapter-nav-desktop'>
+                        part 3<br>solutions?
+                    </span>
+                    <span class='chapter-nav-phone'>
+                        part 3
+                    </span>
                 </div>
             </a>
             <a target="_self" href="#"
                 title="COMING OCT 2024, probably"
                 onclick="alert('COMING OCT 2024, probably')">
-                <div style="line-height:41px; border-right:1px solid rgba(128,128,128,0.8);">
-                    conclusion
+                <div style="border-right:1px solid rgba(128,128,128,0.8);">
+                    <span class='chapter-nav-desktop'>
+                        conclusion
+                    </span>
+                    <span class='chapter-nav-phone'>
+                        outro
+                    </span>
                 </div>
             </a>
         </div>
