useful commit message

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -14,7 +14,7 @@
 
         <form
           method="post"
-          action="https://be7d3308e0e3.ngrok.app/api/subscribe"
+          action="https://loops-api-service.hackclub.dev/"
         >
           <input type="email" name="email" id="email" placeholder="[your email here]" required>
           <input type="hidden" name="subscribeField" value="aiSafetyRegisteredAt">
