A whole lot of tiny fixes I don't even remember anymore

--- a/p1/index.html
+++ b/p1/index.html
@@ -21,12 +21,12 @@
 
     <!-- Social Share Nonsense -->
 	<meta itemprop="name" content="[DRAFT, DO NOT PUBLICLY SHARE]">
-	<meta itemprop="description" content="">
-	<meta itemprop="image" content="">
+	<meta itemprop="description" content="Chapter One of "AI Safety for Fleshy Humans"">
+	<meta itemprop="image" content="https://aisafety.dance/thumb.png">
 	<meta property="og:title" content="[DRAFT, DO NOT PUBLICLY SHARE]">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="">
-	<meta property="og:description" content="">
+	<meta property="og:image" content="https://aisafety.dance/thumb.png">
+	<meta property="og:description" content="Chapter One of "AI Safety for Fleshy Humans"">
 
 	<!-- STYLES -->
 	<link rel="stylesheet" href="../styles/Merriweather/merriweather.css">
@@ -210,8 +210,8 @@
 			change style 😎
 		</div>
         <!--
-        TODO
 		<div id="tab_sub">
+            TODO: CREDITS & Signup for notifications
 			<div></div>
 			subscribe 💖
 		</div>
@@ -1069,7 +1069,7 @@ All fascinating research directions, but none of them are the clear winner (yet)
     
      href="../p2" 
     target="_self">
-<div id="next_button">
+<div id="next_button" class="unfinished">
     <div id="nb--crt_lines"></div>
     <div id="nb--static"></div>
     <div id="nb--words">
@@ -1078,15 +1078,25 @@ All fascinating research directions, but none of them are the clear winner (yet)
         
     </div>
 </div>
-</a></p>
+</a>
+
+<div style="height:0; position:relative">
+    <img style="display: block;
+  margin: 0 auto;
+  width: 250px;
+  position: relative;
+  top: -160px;"
+  src='..//media/misc/unfinished.png'/>
+</div>
+</p>
 <p>Oh. Eeeeeeesh. 😬</p>
 <p>Sorry for the cliffhanger. Look, these 20,000+ words <em>with illustrations</em> took me a long time to make, ok? <strong>Part Two</strong> will be out July 2024, <strong>Part Three</strong> will be out October 2024.</p>
 <p>In the meantime, <em>two</em> things you can do.</p>
 <ol>
 <li>Sign up to be notified when the next chapters come out: ⤵</li>
 </ol>
-<p><iframe src='../signup/signup.html' width='640' height='200'></iframe></p>
-<p>And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span style='display: inline-block; transform: scale(6) translate(6px,3px);'>⤵</span></p>
+<p><iframe src='../signup/' width='640' height='200' class='signup_iframe'></iframe></p>
+<p>And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span style='display: inline-block; transform: scale(6) translate(6px,3px); font-size:19px; line-height:19px; height:19px;'>⤵</span></p>
 <hr class="footnotes-sep">
 <section class="footnotes">
 <ol class="footnotes-list">
@@ -1283,7 +1293,7 @@ names
 </blockquote>
 <p>
 Any errors remaining are solely the fault of
-<a href="TODO">Susan the Scapegoat</a>.
+<a href="..//suzie.png">Suzie the Scapegoat</a>.
 </p>
 <p style="text-align:center">
 . . .
