--- a/p1/index.html
+++ b/p1/index.html
@@ -46,6 +46,9 @@
     <!-- This website's own scripts -->
 	<script src="../scripts/page.js"></script>
 
+    <!-- Hack Club's analytics -->
+    <script defer data-domain="aisafety.dance" src="https://plausible.io/js/script.js"></script>
+
 </head>
 <body>
 
