THE MOST HELPFUL COMMIT MESSAGE IN THE WORLD

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <!-- Title -->
-    <title>[DRAFT, DO NOT PUBLICLY SHARE]</title>
+    <title>AI Safety for Fleshy Humans: a whirlwind tour guide</title>
 
     <!-- UTF-8 & Mobile -->
     <!--<meta charset="utf-8">
@@ -20,10 +20,10 @@
 	<link rel="icon" type="image/png" href="favicon.png">
 
     <!-- Social Share Nonsense -->
-	<meta itemprop="name" content="[DRAFT, DO NOT PUBLICLY SHARE]">
+	<meta itemprop="name" content="AI Safety for Fleshy Humans: a whirlwind tour guide">
 	<meta itemprop="description" content="Your one-stop-shop to understand all the core ideas of AI & AI Safety!">
 	<meta itemprop="image" content="https://aisafety.dance/thumb.png">
-	<meta property="og:title" content="[DRAFT, DO NOT PUBLICLY SHARE]">
+	<meta property="og:title" content="AI Safety for Fleshy Humans: a whirlwind tour guide">
 	<meta property="og:type" content="website">
 	<meta property="og:image" content="https://aisafety.dance/thumb.png">
 	<meta property="og:description" content="Your one-stop-shop to understand all the core ideas of AI & AI Safety!">
