--- a/p1/index.html
+++ b/p1/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <!-- Title -->
-    <title>[DRAFT, DO NOT PUBLICLY SHARE]</title>
+    <title>Part 1: The Past, Present, and Possible Futures</title>
 
     <!-- UTF-8 & Mobile -->
     <!--<meta charset="utf-8">
@@ -20,10 +20,10 @@
 	<link rel="icon" type="image/png" href="favicon.png">
 
     <!-- Social Share Nonsense -->
-	<meta itemprop="name" content="[DRAFT, DO NOT PUBLICLY SHARE]">
+	<meta itemprop="name" content="Part 1: The Past, Present, and Possible Futures">
 	<meta itemprop="description" content="Chapter One of "AI Safety for Fleshy Humans"">
 	<meta itemprop="image" content="https://aisafety.dance/thumb.png">
-	<meta property="og:title" content="[DRAFT, DO NOT PUBLICLY SHARE]">
+	<meta property="og:title" content="Part 1: The Past, Present, and Possible Futures">
 	<meta property="og:type" content="website">
 	<meta property="og:image" content="https://aisafety.dance/thumb.png">
 	<meta property="og:description" content="Chapter One of "AI Safety for Fleshy Humans"">
@@ -1093,13 +1093,11 @@ All fascinating research directions, but none of them are the clear winner (yet)
 </div>
 </p>
 <p>Oh. Eeeeeeesh. 😬</p>
-<p>Sorry for the cliffhanger. Look, these 20,000+ words <em>with illustrations</em> took me a long time to make, ok? <strong>Part Two</strong> will be out July 2024, <strong>Part Three</strong> will be out October 2024.</p>
-<p>In the meantime, <em>two</em> things you can do.</p>
-<ol>
-<li>Sign up to be notified when the next chapters come out: ⤵</li>
-</ol>
+<p>Sorry for the cliffhanger. Look, the 20,000+ words so far <em>with illustrations</em> took me a long time to make, ok? <strong>Part Two</strong> will be out July 2024, <strong>Part Three</strong> will be out October 2024.</p>
+<p>In the meantime, 2 things you can do!</p>
+<p>1) Sign up to be notified when the next chapters come out: ⤵</p>
 <p><iframe src='../signup/' width='640' height='200' class='signup_iframe'></iframe></p>
-<p>And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span style='display: inline-block; transform: scale(6) translate(6px,3px); font-size:19px; line-height:19px; height:19px;'>⤵</span></p>
+<p>And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span style='display: inline-block; transform: scale(6); font-size: 19px; line-height: 8px; height: 14px; transform-origin: top left;'>⤵</span></p>
 <hr class="footnotes-sep">
 <section class="footnotes">
 <ol class="footnotes-list">
