fixed ipad/responsive rendering, also more GitHub credits

--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
 <head>
 
     <!-- Title -->
-    <title>AI Safety for Fleshy Humans: a whirlwind tour guide</title>
+    <title>AI Safety for Fleshy Humans: a whirlwind tour</title>
 
     <!-- UTF-8 & Mobile -->
-    <!--<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-	<meta content="utf-8" http-equiv="encoding">
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=460">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- On POSTS, links are external by default -->
     <base target="_blank">
@@ -20,10 +16,10 @@
 	<link rel="icon" type="image/png" href="favicon.png">
 
     <!-- Social Share Nonsense -->
-	<meta itemprop="name" content="AI Safety for Fleshy Humans: a whirlwind tour guide">
+	<meta itemprop="name" content="AI Safety for Fleshy Humans: a whirlwind tour">
 	<meta itemprop="description" content="Your one-stop-shop to understand all the core ideas of AI & AI Safety!">
 	<meta itemprop="image" content="https://aisafety.dance/thumb.png">
-	<meta property="og:title" content="AI Safety for Fleshy Humans: a whirlwind tour guide">
+	<meta property="og:title" content="AI Safety for Fleshy Humans: a whirlwind tour">
 	<meta property="og:type" content="website">
 	<meta property="og:image" content="https://aisafety.dance/thumb.png">
 	<meta property="og:description" content="Your one-stop-shop to understand all the core ideas of AI & AI Safety!">
