--- a/p1/index.html
+++ b/p1/index.html
@@ -6,12 +6,8 @@
     <title>Part 1: The Past, Present, and Possible Futures</title>
 
     <!-- UTF-8 & Mobile -->
-    <!--<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-	<meta content="utf-8" http-equiv="encoding">
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=460">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- On POSTS, links are external by default -->
     <base target="_blank">
@@ -21,12 +17,12 @@
 
     <!-- Social Share Nonsense -->
 	<meta itemprop="name" content="Part 1: The Past, Present, and Possible Futures">
-	<meta itemprop="description" content="Chapter One of "AI Safety for Fleshy Humans"">
+	<meta itemprop="description" content="Chapter One of “AI Safety for Fleshy Humans: a whirlwind tour”">
 	<meta itemprop="image" content="https://aisafety.dance/thumb.png">
 	<meta property="og:title" content="Part 1: The Past, Present, and Possible Futures">
 	<meta property="og:type" content="website">
 	<meta property="og:image" content="https://aisafety.dance/thumb.png">
-	<meta property="og:description" content="Chapter One of "AI Safety for Fleshy Humans"">
+	<meta property="og:description" content="Chapter One of “AI Safety for Fleshy Humans: a whirlwind tour”">
 
 	<!-- STYLES -->
 	<link rel="stylesheet" href="../styles/Merriweather/merriweather.css">
