fixed ipad/responsive rendering, also more GitHub credits

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>AI Safety for Fleshy Humans: a whirlwind tour</title>
 
     <!-- UTF-8 & Mobile -->
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- On POSTS, links are external by default -->
+    <!-- Links are external by default -->
     <base target="_blank">
 
 	<!-- Favicon -->
@@ -31,7 +32,6 @@
 	<link rel="stylesheet" href="styles/page.css">
 
 	<!-- SCRIPTS -->
-
     <!-- Littlefoot: for my feetnotes -->
     <script src="scripts/littlefoot.js" ></script>
     <!-- Nutshell: expandable explanations -->
@@ -39,10 +39,9 @@
     <script> Nutshell.setOptions({ startOnLoad: false, /* Start AFTER footnotes loaded */ }); </script>
     <!-- MathJAX: for nice math -->
     <script src="scripts/tex-mml-chtml.js"></script>
-    <!-- This website's own scripts -->
-	<script src="scripts/page.js"></script>
-
-    <!-- Hack Club's analytics -->
+	<!-- This website's own scripts -->
+    <script src="scripts/page.js"></script>
+    <!-- Hack Club's no-cookies, GDPR-compliant analytics -->
     <script defer data-domain="aisafety.dance" src="https://plausible.io/js/script.js"></script>
 
 </head>
@@ -692,14 +691,49 @@ Special thanks to these teens at Hack Club for
 beta-reading & giving feedback on this piece:
 </p>
 <blockquote>
-names
+
+Arthur Beck,
+Atharv Gupta,
+Brendan Lee,
+Celeste,
+Charalampos Fanoulis,
+Charlie,
+Cheru Berhanu,
+Claire Wang,
+Elijah,
+Fred Han,
+Gia Bách Nguyễn,
+Hajrah Siddiqui,
+Jakob,
+Joseph Ross,
+Kieran Klukas,
+Lexi Mattick,
+Mason Meirs,
+Michael Panait,
+Nick Zandbergen,
+Nila Palmo Ram,
+Pixelglide,
+py660,
+River Lewis,
+Samuel Cottrell,
+Samuel Fernandez,
+Saran Wagner,
+Skyler Grey,
+S P U N G E,
+Vihaan Sondhi
+
 </blockquote>
 <p>
 Also thank you to these non-teenagers for giving feedback:
 </p>
+
 <blockquote>
-names
+B Cavello,
+Kara Massie,
+Paul Dancstep,
+Tobias Rose-Stockwell
 </blockquote>
+
 <p>
 Any errors remaining are solely the fault of
 <a href="/suzie.png">Suzie the Scapegoat</a>.
