--- a/p1/index.html
+++ b/p1/index.html
@@ -1268,7 +1268,7 @@ Also, Nicky has a
 &
 <a href="https://ko-fi.com/nickycase">Ko-Fi</a>.
 (p.s:
-<a href="TODO">thank-you page for my supporters!</a>)
+<a href="..//signup/supporters-p1.html">thank-you page for my supporters!</a>)
 </p>
 <p style="text-align:center">
 . . .
@@ -1307,7 +1307,7 @@ Samuel Cottrell,
 Samuel Fernandez,
 Saran Wagner,
 Skyler Grey,
-S P U N G E,
+S&nbsp;P&nbsp;U&nbsp;N&nbsp;G&nbsp;E,
 Vihaan Sondhi
 
 </blockquote>
@@ -1343,7 +1343,7 @@ https://AIsafety.dance, Hack Club (2024).
 </blockquote>
 <p>
 Finally, here's the
-<a href="TODO">open-source code</a>
+<a href="https://github.com/hackclub/ai-safety-dance">open-source code</a>
 for this website!
 </p>
 <p>
