twitter card and new p1 thumb

--- a/p1/index.html
+++ b/p1/index.html
@@ -19,11 +19,15 @@
     <!-- Social Share Nonsense -->
 	<meta itemprop="name" content="Part 1: The Past, Present, and Possible Futures">
 	<meta itemprop="description" content="Chapter One of “AI Safety for Fleshy Humans: a whirlwind tour”">
-	<meta itemprop="image" content="https://aisafety.dance/thumb.png">
+	<meta itemprop="image" content="https://aisafety.dance/thumbs/thumb-p1.png">
 	<meta property="og:title" content="Part 1: The Past, Present, and Possible Futures">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="https://aisafety.dance/thumb.png">
+	<meta property="og:image" content="https://aisafety.dance/thumbs/thumb-p1.png">
 	<meta property="og:description" content="Chapter One of “AI Safety for Fleshy Humans: a whirlwind tour”">
+    <meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Part 1: The Past, Present, and Possible Futures">
+	<meta name="twitter:description" content="Chapter One of “AI Safety for Fleshy Humans: a whirlwind tour”">
+	<meta name="twitter:image" content="https://aisafety.dance/thumbs/thumb-p1.png">
 
 	<!-- STYLES -->
 	<link rel="stylesheet" href="../styles/Merriweather/merriweather.css">
@@ -1092,7 +1096,7 @@ All fascinating research directions, but none of them are the clear winner (yet)
 <p>In the meantime, 2 things you can do!</p>
 <p>1) Sign up to be notified when the next chapters come out: ⤵</p>
 <p><iframe src='../signup/' width='640' height='200' class='signup_iframe'></iframe></p>
-<p>And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span style='display: inline-block; transform: scale(6); font-size: 19px; line-height: 8px; height: 14px; transform-origin: top left;'>⤵</span></p>
+<p>And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! ⤵ <!--span style='display: inline-block; transform: scale(6); font-size: 19px; line-height: 8px; height: 14px; transform-origin: top left;'>⤵</span TODO: fix this...--></p>
 <hr class="footnotes-sep">
 <section class="footnotes">
 <ol class="footnotes-list">
