--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
     <!-- Social Share Nonsense -->
 	<meta itemprop="name" content="AI Safety for Fleshy Humans: a whirlwind tour">
 	<meta itemprop="description" content="Your one-stop-shop to understand all the core ideas of AI & AI Safety!">
-	<meta itemprop="image" content="https://aisafety.dance/thumb.png">
+	<meta itemprop="image" content="https://aisafety.dance/thumbs/thumb.png">
 	<meta property="og:title" content="AI Safety for Fleshy Humans: a whirlwind tour">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="https://aisafety.dance/thumb.png">
+	<meta property="og:image" content="https://aisafety.dance/thumbs/thumb.png">
 	<meta property="og:description" content="Your one-stop-shop to understand all the core ideas of AI & AI Safety!">
+    <meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="AI Safety for Fleshy Humans: a whirlwind tour">
+	<meta name="twitter:description" content="Your one-stop-shop to understand all the core ideas of AI & AI Safety!">
+	<meta name="twitter:image" content="https://aisafety.dance/thumbs/thumb.png">
 
 	<!-- STYLES -->
 	<link rel="stylesheet" href="styles/Merriweather/merriweather.css">
