--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
 	<div id="panel_share">share on... w/e</div>
     <!-- SHILLING FOR BIG NICKY -->
 	<div id="panel_sub">
-        <!-- TODO: shill for Hack Club instead -->
     </div>
     <div id="panel_support"></div>
 
@@ -222,7 +221,7 @@
 		</div>
         <!--
 		<div id="tab_sub">
-            TODO: CREDITS & Signup for notifications
+            CREDITS & Signup for notifications
 			<div></div>
 			subscribe 💖
 		</div>
@@ -692,14 +691,20 @@ in collaboration with
 <a href="https://hackclub.com/">Hack Club</a>.
 </p>
 <p>
-🦕 <b>Hack Club</b>
-is a non-profit to help teens <i>help each other</i> learn to code & create.
-Learning, by making stuff you actually care about!
-Where it's not "cheating" to team up with friends!
-Gee, what a concept!
+🦕 <a href="https://ncase.me"><b>Hack Club</b></a>
+is a nonprofit where teenagers code awesome projects together -
+like <a href="https://cpu.land">cpu.land</a>,
+<a href="https://sinerider.com">SineRider</a>,
+and this!
+Join
+<a href="https://hackathons.hackclub.com">in-person hackathons</a>,
+run a
+<a href="https://hackclub.com/clubs/">club at your school</a>,
+and
+<a href="https://hackclub.com/slack/">connect with other friendly teenagers</a>.
 </p>
 <p>
-😻 <b>Nicky Case</b>
+😻 <a href="https://ncase.me"><b>Nicky Case</b></a>
 is fifteen cats in a trenchcoat.
 She makes internet playthings, like
 <a href="https://ncase.me/trust/">The Evolution of Trust</a>,
@@ -762,11 +767,11 @@ Vihaan Sondhi
 </blockquote>
 <p>
 Also thank you to these non-teenagers for giving feedback:
+(Though I assume they were teenagers at <i>some</i> point)
 </p>
 
 <blockquote>
 B Cavello,
-Kara Massie,
 Paul Dancstep,
 Tobias Rose-Stockwell
 </blockquote>
@@ -809,7 +814,6 @@ Thank you for being the kind of person to read the credits~ 🙏
 </p>
 <p>
     Also, expandable "Nutshells" that make good standalone bits:
-    (TODO: how to embed, hover & use icon)
 </p>
 
 <p>
