aahhhh anki not building

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 </ol>
 <p>To avoid that for <em>this</em> guide, I've included some <em>OPTIONAL</em> interactive flashcards! They use &quot;Spaced Repetition&quot;, an easy-ish, evidence-backed way to &quot;make long-term memory a choice&quot;. (<a href="#SpacedRepetition">:click here to learn more about Spaced Repetition!</a>)</p>
 <p>Here: <strong>try the below flashcards, to retain what you just learnt!</strong></p>
-<p>(There's an optional sign-up at the end, <em>if</em> you want to save these cards for long-term study. Note: <em>I do not own or control this app</em>, it's third-party. If you'd rather use the open source flashcard app <a href="https://apps.ankiweb.net/index.html">Anki</a>, <strong>here's <a href="TODO">a downloadable Anki deck</a></strong>!)</p>
+<p>(There's an optional sign-up at the end, <em>if</em> you want to save these cards for long-term study. Note: <em>I do not own or control this app</em>, it's third-party.<!--If you'd rather use the open source flashcard app [Anki](https://apps.ankiweb.net/index.html), **here's [a downloadable Anki deck](TODO)**!-->)</p>
 <p>(Also, you don't need to memorize the answers <em>exactly</em>, just the gist. You be the judge if you got it &quot;close enough&quot;.)</p>
 <orbit-reviewarea color="violet">
     <orbit-prompt
@@ -493,7 +493,7 @@ It’s what you know for sure that just ain’t so.</em>”</p>
 </ul>
 </li>
 </ul>
-<p>(To review the flashcards, click the <img src="media/intro/icon1.png" class="inline-icon"/> Table of Contents icon in the right sidebar, then click the &quot;🤔 Review&quot; links. Alternatively, download the <a href="TODO">Anki deck for the Intro</a>.)</p>
+<p>(To review the flashcards, click the <img src="media/intro/icon1.png" class="inline-icon"/> Table of Contents icon in the right sidebar, then click the &quot;🤔 Review&quot; links.<!--Alternatively, download the [Anki deck for the Intro](TODO).-->)</p>
 <p>Finally! Now that we've taken the 10,000-foot view, let's get hiking on our whirlwind tour of AI Safety... for us warm, normal, fleshy humans!</p>
 <p><strong>Click to continue ⤵</strong></p>
 <p><a
