--- a/p1/index.html
+++ b/p1/index.html
@@ -359,7 +359,7 @@
 <hr>
 <h3>🤔 Review #1 (OPTIONAL!)</h3>
 <p>Want to actually remember what you've read here, instead of forgetting it all 2 days later? Here's an <em>optional</em> flashcard review for you!</p>
-<p>(<a href="../#SpacedRepetition">:Learn more about &quot;Spaced Repetition&quot; flashcards</a>. Alternatively, use <a href="https://apps.ankiweb.net/">Anki</a> and get <a href="TODO">Part One's cards as an Anki deck</a>)</p>
+<p>(<a href="../#SpacedRepetition">:Learn more about &quot;Spaced Repetition&quot; flashcards</a>.<!--Alternatively, use [Anki](https://apps.ankiweb.net/) and get [Part One's cards as an Anki deck](TODO)-->)</p>
 <orbit-reviewarea color="violet">
     <orbit-prompt
         question="Who's widely considered the founder of Computer Science & Artificial Intelligence?"
@@ -1154,7 +1154,7 @@ All fascinating research directions, but none of them are the clear winner, yet.
 <li>Folks concerned about risks ranging from &quot;bad&quot; to &quot;existential&quot;, and from &quot;AI <em>accidentally</em> goes rogue on humans&quot; to &quot;AI <em>intentionally</em> misused by rogue humans&quot;.</li>
 </ul>
 <p><strong>4)</strong> 🤷 Experts wildly disagree on <em>everything</em> about the future of AI: When we'll get AGI, how fast AGI would self-improve, whether our trajectory is towards a good or bad place.</p>
-<p>(If you skipped the flashcards &amp; would like to review them now, click the Table of Contents icon in the right sidebar, then click the &quot;🤔 Review&quot; links. Alternatively, download the <a href="TODO">Anki deck for Part One</a>.)</p>
+<p>(If you skipped the flashcards &amp; would like to review them now, click the Table of Contents icon in the right sidebar, then click the &quot;🤔 Review&quot; links.<!--Alternatively, download the [Anki deck for Part One](TODO).-->)</p>
 <hr>
 <p><em>Can we control what we've made?</em></p>
 <p>As they say, &quot;a problem well-stated is a problem half-solved&quot;.<sup class="footnote-ref"><a href="#fn72" id="fnref72">[72]</a></sup></p>
